public enum TipoDoc {
    DNI,
    CUIT
}
